--- a/T.Windows/T.Windows.csproj
+++ b/T.Windows/T.Windows.csproj
@@ -42,7 +42,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\References\</OutputPath>
+    <OutputPath>..\References\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -71,7 +71,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="T.Tools, Version=1.20.1.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\References\T.Tools.dll</HintPath>
+      <HintPath>..\References\T.Tools.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
